--- a/templates/index.html
+++ b/templates/index.html
@@ -56,8 +56,12 @@
       <div class="feature col">
         
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-          <<img  src={{skill.img_url}} height="30">
+          <svg {{skill.icon}}></svg>
         </div>
+
+        
+      
+        
          
         <h3 class="fs-2 text-body-emphasis">{{skill.title|safe}}</h3>
         <p>{{skill.body|safe}}</p>
