--- a/templates/footer.html
+++ b/templates/footer.html
@@ -32,6 +32,19 @@
                                   </span>
                               </a>
                           </li>
+
+
+                          <li class="list-inline-item">
+                            <a href="https://alis-blog.onrender.com/">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-web fa-stack-1x fa-inverse" ></i>
+                                </span>
+                            </a>
+                        </li>
+
+
+                          
                       </ul>
 
 
