--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" "data-bs-theme="dark"">
+<html lang="en">
 
 <head>
 
@@ -64,7 +64,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
         
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav me-auto ">
           
          
             
